# DiffusionOOD

./: .gitignore  .mailmap  CITATION.cff  README.md  download_weights.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: __init__.py
docs/: ALGORITHM.md  README.md  SE_PW_TH_at_IML.md  experiments.md  results_summary.md
results/: lambda02_ood_results.json
results/latex_tables/: k_ablation_table.tex  scoring_method_table.tex  separation_loss_table.tex
results_json/: external_ood_results.json  separation_loss_results.json
scripts/: compute_gap1_gap2.py  eval_lambda02_best.py  eval_svhn_sep_ablation.py  evaluate.py  evaluate_external_ood.py  run_ablations.py  run_all_gaps.sh  run_three_seeds.sh  train.py  write_thesis_outputs.py
src/: lightning_module.py  metrics.py  model.py  scoring.py  utils.py
tests/: test_metrics.py  test_model.py  test_scoring.py
thesis_submission/02_cifar10_cdm/results_json/: external_ood_results.json  separation_loss_results.json
thesis_submission/02_cifar10_cdm/tables/: main_results_table.tex  separation_loss_table.tex
