[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diffusion-ood"
version = "1.0.0"
description = "Conditional diffusion models for out-of-distribution detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ahmed Mohammed"}
]
keywords = ["diffusion-models", "ood-detection", "anomaly-detection", "pytorch", "quality-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "diffusers>=0.25.0",
    "wandb>=0.16.0",
    "huggingface-hub>=0.20.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/ahmed-3m/DiffusionOOD"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
